# funkyprompt

./: .gitignore  IR.ipynb  IngestIntent.ipynb  Markdown.ipynb  MarkdownFromParquet.ipynb  Procfile  README.md  notes.txt  pyproject.toml  pytest.ini  sample.ipynb  simple.ipynb
.github/workflows/: build.yaml
.ipynb_checkpoints/: sample-checkpoint.ipynb
deploy/: application-set.yaml  application.yaml  test.yaml
deploy/app/: argoKinds.yaml  kustomization.yaml  mother-app.yaml  uber-workflow.yaml
deploy/postgres/: install.sql
docs/: README.md  SUMMARY.md  example-test-questions.md  funky-llm-best-practices.md  tips-and-tricks.md
docs/auditing/: open-telemetry.md  opentelemetry-support.md  overview.md  setting-up-an-observability-stack.md
docs/functions/: 1-introducing-function-execution-plans.md  2-running-and-auditing-plan-execution.md  3-saving-plans-and-motifs.md  4-what-happens-when-we-scale.md  function-execution-plans.md  mixing-and-matching.md  overview.md
docs/notebooks/: Functions.ipynb  SearchServer.ipynb  Store.ipynb  TypeIngestion.ipynb
docs/stores/: distributed-search.md  overview.md  pydantic-types-in-funkyprompt.md
docs/tutorials/: 1.-ingesting-data-into-a-new-instance.md  2-creating-functions-over-stores.md  3.-indexing-functions-of-different-types.md  5.-working-with-embeddings.md  5.-working-with-vector-searches-and-embeddings.md  6-logic-problems.md
docs/why-funkyprompt/: deploy.md  install.md  rag-systems.md
funkyprompt/: __init__.py  _version.py  app.py  cli.py
funkyprompt/agent/: AgentBase.py  (+2 more)
funkyprompt_tests/: test_basic.py
(+73 files in other folders)
