[tool.poetry]
name = "funkyprompt"
version = "0.1.311"
description = "A functionally orientated way to make prompts for speaking with LLMs"
authors = ["mr-saoirse <amartey@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
openai = "^0.28.1"
loguru = "^0.7.2"
typer = "^0.9.0"
lancedb = "^0.3.2"
lance = "^1.2.1"
duckdb = "^0.9.1"
polars = "^0.19.11"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
fprompt = "funkyprompt.cli:app"